removed submeeting details and meta details and color in css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,47 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="TemplateMo">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 
-    <title>Education Meeting HTML5 Template</title>
-
+    <title>Uplift Music</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="description"
+      content="Unlock the magic of music with Uplift Music! Piano and vocal lessons designed for ages 4 and beyond, offering a dynamic and fun-filled approach. Our expert instructors are passionate mentors dedicated to your musical journey. Join us for an immersive experience transcending age, fostering creativity and joy in every note. Whether you're a young prodigy or an adult embracing lifelong learning, let the enchanting sounds of piano and the power of your voice become the key to a lifetime of musical fulfilment."
+    />
+    <meta
+      name="keywords"
+      content="Uplift Music, music lessons, piano lessons, vocal lessons, music education, Helderberg, Strand, lifelong learning, creative music education"
+    />
+    <meta name="author" content="Uplift Music" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Uplift Music - Strand, Helderberg" />
+    <meta
+      property="og:description"
+      content="Unlock the magic of music with dynamic and fun-filled piano and vocal lessons. Expert instructors dedicated to your musical journey."
+    />
+    <meta property="og:image" content="https://www.upliftmusic.co.za/" />
+    <meta property="og:url" content="uhttps://www.upliftmusic.co.za/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Uplift Music - Strand, Helderberg" />
+    <meta
+      name="twitter:description"
+      content="Unlock the magic of music with dynamic and fun-filled piano and vocal lessons. Expert instructors dedicated to your musical journey."
+    />
+    <meta name="twitter:image" content="https://www.upliftmusic.co.za/" />
+    <meta name="favicon" content="" />
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -20,39 +55,19 @@
     <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/lightbox.css">
-<!--
-
-TemplateMo 569 Edu Meeting
-
-https://templatemo.com/tm-569-edu-meeting
-
--->
+    <link
+    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,400;8..60,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    rel="stylesheet"
+  />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Zeyada&display=swap"
+    rel="stylesheet"
+  />
   </head>
 
 <body>
 
-  <!-- Sub Header -->
-  <div class="sub-header">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-sm-8">
-          <div class="left-content">
-            <p>This is an educational <em>HTML CSS</em> template by TemplateMo website.</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-4">
-          <div class="right-icons">
-            <ul>
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+
 
   <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky">
@@ -94,7 +109,7 @@ https://templatemo.com/tm-569-edu-meeting
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
       <video autoplay muted loop id="bg-video">
-          <source src="assets/images/course-video.mp4" type="video/mp4" />
+          <source src="assets/vids/pexels_videos_2306150 (1080p).mp4" type="video/mp4" />
       </video>
 
       <div class="video-overlay header-text">
