--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="row">
               <div class="col-lg-12">
                 <div class="caption">
-              <h6>Hello Students</h6>
+              <h6>Uplift Music and Uplift Experiences</h6>
               <h2>Welcome to Education</h2>
-              <p>This is an edu meeting HTML CSS template provided by <a rel="nofollow" href="https://templatemo.com/page/1" target="_blank">TemplateMo website</a>. This is a Bootstrap v5.1.3 layout. The video background is taken from Pexels website, a group of young people by <a rel="nofollow" href="https://www.pexels.com/@pressmaster" target="_blank">Pressmaster</a>.</p>
+              <p>Harnessing the transformative power of music, art, and comprehensive coaching to inspire, uplift, and grow individuals and communities</p>
+              <!--<p>This is an edu meeting HTML CSS template provided by <a rel="nofollow" href="https://templatemo.com/page/1" target="_blank">TemplateMo website</a>. This is a Bootstrap v5.1.3 layout. The video background is taken from Pexels website, a group of young people by <a rel="nofollow" href="https://www.pexels.com/@pressmaster" target="_blank">Pressmaster</a>.</p>-->
               <div class="main-button-red">
                   <div class="scroll-to-section"><a href="#contact">Register Now!</a></div>
               </div>
@@ -183,12 +184,19 @@ https://templatemo.com/tm-569-edu-meeting
       <div class="row">
         <div class="col-lg-12">
           <div class="section-heading">
-            <h2>Upcoming Meetings</h2>
+            <h2>About Uplift</h2>
           </div>
         </div>
-        <div class="col-lg-4">
+        <hr class="col-lg-4">
           <div class="categories">
-            <h4>Meeting Catgories</h4>
+            <!--<h4>Meeting Catgories</h4>-->
+            <p>At Uplift Music and Uplift Experiences, we harness the transformative power of music, art, and comprehensive coaching to inspire, uplift, and grow individuals and communities.</p>
+            </div>
+            <p> Our platform serves as a dynamic hub for music education, offering resources for teachers, composers, musicians, and bands to showcase and sell their digital prints, arrangements, and new compositions. Additionally, we provide artists with a marketplace to sell their arts and crafts.</p>
+            <p> Our diverse coaching channels, including life coaching, arts therapies, and creative workshops, aim to nurture personal development. By empowering individuals with an accessible platform to sell their intellectual property and creations, we believe the individual becomes the catalyst for positive change, growth and economic development in their communities.</p>
+            <p>Uplift Music and Uplift Experiences: creating a harmonious blend of artistic expression and personal advancement.
+
+            </p>
             <ul>
               <li><a href="#">Sed tempus enim leo</a></li>
               <li><a href="#">Aenean molestie quis</a></li>
