--- a/index.html
+++ b/index.html
@@ -782,15 +782,13 @@
       </div>
     </div>
     <div class="footer">
-      <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved. 
+      <p>Copyright © 2024 Uplift Music. All Rights Reserved. 
           <br>
-          Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a>
-          <br>
-          Distibuted By: <a href="https://themewagon.com" target="_blank" title="Build Better UI, Faster">ThemeWagon</a>
+          Maintained by: <a href="https://www.ft8.co.za" target="_blank" title="FT8.co.za">Ft8.co.za</a>
+         
         </p>
     </div>
   </section>
-
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
