--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                 <img src="assets/images/course-03.jpg" alt="" />
                 <div class="down-content">
                   <h4>Book your classes</h4>
-                  <p>View classes & times that will suit you best</p>
+                  <p></p>
                   <!--<div class="info">
                   <div class="row">
                     <div class="col-8">
@@ -523,13 +523,13 @@
               <div class="item">
                 <img src="assets/images/course-04.jpg" alt="" />
                 <div class="down-content">
-                  <h4>Receive Email & Notifications</h4>
+                  <h4>Notifications via Email</h4>
                 </div>
               </div>
               <div class="item">
                 <img src="assets/images/course-01.jpg" alt="" />
                 <div class="down-content">
-                  <h4>Lorem ipsum dolor sit amet adipiscing elit</h4>
+                  <h4>Lorem ipsum dolor</h4>
                 </div>
               </div>
               <!--<div class="item">
@@ -631,7 +631,7 @@
                           name="name"
                           type="text"
                           id="name"
-                          placeholder="YOURNAME...*"
+                          placeholder="Your Name...*"
                           required=""
                         />
                       </fieldset>
@@ -643,7 +643,7 @@
                           type="text"
                           id="email"
                           pattern="[^ @]*@[^ @]*"
-                          placeholder="YOUR EMAIL...*"
+                          placeholder="Your Email...*"
                           required=""
                         />
                       </fieldset>
@@ -654,7 +654,7 @@
                           name="phone"
                           type="number"
                           id="cell"
-                          placeholder="CELL...*"
+                          placeholder="Your Number...*"
                           required=""
                         />
                         <!--<input name="subject" type="text" id="subject" placeholder="SUBJECT...*" required="">-->
@@ -667,7 +667,7 @@
                           type="text"
                           class="form-control"
                           id="message"
-                          placeholder="YOUR MESSAGE..."
+                          placeholder="Your Message..."
                           required=""
                         ></textarea>
                       </fieldset>
@@ -697,14 +697,14 @@
                   <h6>Email Address</h6>
                   <span
                     ><a href="mailto:graham@upliftmusic.co.za"
-                      >graham@upliftmusic.co.za</a
+                      ><i class="fa fa-envelope-o" aria-hidden="true"></i> graham@upliftmusic.co.za</a
                     ></span
                   >
                 </li>
                 <li>
                   <h6>Street Address</h6>
                   <span
-                    >17 Victoria Street, 4 The Marine, Van Ryneveld, Strand ,
+                    ><i class="fa fa-map-marker" aria-hidden="true"></i> 17 Victoria Street, 4 The Marine, Van Ryneveld, Strand ,
                     7140
                   </span>
                 </li>
