started to fix menu

--- a/index.html
+++ b/index.html
@@ -83,22 +83,18 @@
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
-                <li class="scroll-to-section">
+                <li>
                   <a href="#top" class="active">Home</a>
                 </li>
-                <li><a href="meetings.html">Meetings</a></li>
-                <li class="scroll-to-section">
-                  <a href="#apply">Apply Now</a>
+                <li><a href="meetings.html">About</a></li>
+                <li >
+                  <a href="#apply">Register</a>
                 </li>
-                <li class="has-sub">
-                  <a href="javascript:void(0)">Pages</a>
-                  <ul class="sub-menu">
-                    <li><a href="meetings.html">Upcoming Meetings</a></li>
-                    <li><a href="meeting-details.html">Meeting Details</a></li>
-                  </ul>
-                </li>
-                <li class="scroll-to-section">
-                  <a href="#courses">Courses</a>
+                <li >
+                  <a href="javascript:void(0)">Book</a>
+                 
+                <li >
+                  <a href="#courses">Pricing</a>
                 </li>
                 <li class="scroll-to-section">
                   <a href="#contact">Contact Us</a>
