added missing pages, and fonts

--- a/about.html
+++ b/about.html
@@ -84,16 +84,17 @@
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
                 <li>
-                  <a href="#top" class="active">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
-                <li><a href="about.html">About</a></li>
-                <li >
-                  <a href="register.html">Register</a>
+                <li><a href="about.html" class="active">About</a></li>
+                <li>
+                  <a href="register.html" >Register</a>
                 </li>
-                <li >
+                <li>
                   <a href="bookings.html">Book</a>
-                 
-                <li >
+                </li>
+
+                <li>
                   <a href="pricing.html">Pricing</a>
                 </li>
                 <li>
@@ -115,36 +116,41 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <h6>subheading</h6>
-            <h2>Big HEading</h2>
+            <h2>About</h2>
+            <h6>
+              Some information about Uplift Music
+            </h6>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="meetings-page" id="meetings">
+    <section class="meetings-page header-text" id="meetings">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="row">
-              <div class="col-lg-12">
-                <div class="meeting-single-item">
-                  <div class="down-content">
-                    <a href="meeting-details.html"
-                      ><h4>Online Teaching and Learning Tools</h4></a
-                    >
-                    <p>
-                      Recreio dos Bandeirantes, Rio de Janeiro - RJ, 22795-008,
-                      Brazil
-                    </p>
-                    
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-12">
-                <div class="main-button-red">
-                  <a href="meetings.html">Back To Meetings List</a>
-                </div>
+            <div class="meeting-single-item">
+              <div class="down-content header-text">
+                <a href="meeting-details.html"><h4>About Uplift</h4></a>
+
+                <p class="description">
+                  At Uplift Music and Uplift Experiences, we harness the
+                  transformative power of music, art, and comprehensive coaching
+                  to inspire, uplift, and grow individuals and communities. <br><br>Our
+                  platform serves as a dynamic hub for music education, offering
+                  resources for teachers, composers, musicians, and bands
+                  to showcase and sell their digital prints, arrangements, and
+                  new compositions.<br><br> Additionally, we provide artists with a
+                  marketplace to sell their arts and crafts. Our diverse
+                  coaching channels, including life coaching, arts therapies, and
+                  creative workshops, aim to nurture personal development.<br><br> By
+                  empowering individuals with an accessible platform to sell
+                  their intellectual property and creations, we believe the
+                  individual becomes the catalyst for positive change, growth and
+                  economic development in their communities. Uplift Music and
+                  UpliftExperiences: creating a harmonious blend of artistic
+                  expression and personal advancement.
+                </p>
               </div>
             </div>
           </div>
