--- a/bookings.html
+++ b/bookings.html
@@ -84,16 +84,17 @@
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
                 <li>
-                  <a href="#top" class="active">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li><a href="about.html">About</a></li>
-                <li >
+                <li>
                   <a href="register.html">Register</a>
                 </li>
-                <li >
-                  <a href="bookings.html">Book</a>
-                 
-                <li >
+                <li>
+                  <a href="#" class="active">Book</a>
+                </li>
+
+                <li>
                   <a href="pricing.html">Pricing</a>
                 </li>
                 <li>
@@ -115,36 +116,31 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <h6>subheading</h6>
-            <h2>Big HEading</h2>
+            <h2>Bookings</h2>
+            <h6>
+              Please <span style="color: var(--bs-2)">Login</span> below in to
+              continue
+            </h6>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="meetings-page" id="meetings">
+    <section class="meetings-page header-text" id="meetings">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="row">
-              <div class="col-lg-12">
-                <div class="meeting-single-item">
-                  <div class="down-content">
-                    <a href="meeting-details.html"
-                      ><h4>Online Teaching and Learning Tools</h4></a
-                    >
-                    <p>
-                      Recreio dos Bandeirantes, Rio de Janeiro - RJ, 22795-008,
-                      Brazil
-                    </p>
-                    
-                  </div>
-                </div>
+            <div class="meeting-single-item">
+              <div class="down-content header-text">
+                <script
+                  type="text/javascript"
+                  src="https://app.mymusicstaff.com/Widget/v2/Login.ashx"
+                ></script>
               </div>
-              <div class="col-lg-12">
-                <div class="main-button-red">
-                  <a href="meetings.html">Back To Meetings List</a>
-                </div>
+              <div class="main-button-red">
+                <a href="register.html" class="main-button-red col-lg-4"
+                  >Register</a
+                >
               </div>
             </div>
           </div>
