--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
                 <li>
                   <a href="#top" class="active">Home</a>
                 </li>
-                <li><a href="meetings.html">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li >
-                  <a href="#apply">Register</a>
+                  <a href="register.html">Register</a>
                 </li>
                 <li >
-                  <a href="javascript:void(0)">Book</a>
+                  <a href="bookings.html">Book</a>
                  
                 <li >
-                  <a href="#courses">Pricing</a>
+                  <a href="pricing.html">Pricing</a>
                 </li>
-                <li class="scroll-to-section">
-                  <a href="#contact">Contact Us</a>
+                <li>
+                  <a href="index.html#contact">Contact Us</a>
                 </li>
               </ul>
               <a class="menu-trigger">
@@ -135,7 +135,7 @@
                 <!--<p>This is an edu meeting HTML CSS template provided by <a rel="nofollow" href="https://templatemo.com/page/1" target="_blank">TemplateMo website</a>. This is a Bootstrap v5.1.3 layout. The video background is taken from Pexels website, a group of young people by <a rel="nofollow" href="https://www.pexels.com/@pressmaster" target="_blank">Pressmaster</a>.</p>-->
                 <div class="main-button-red">
                   <div class="scroll-to-section">
-                    <a href="#contact">Register Now!</a>
+                    <a href="register.html">Register Now!</a>
                   </div>
                 </div>
               </div>
@@ -552,7 +552,7 @@
             </div>-->
             </div>
             <div class="main-button-red">
-              <a href="#contact">Book your classes</a>
+              <a href="register.html">Book your classes</a>
             </div>
           </div>
         </div>
