--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Bootstrap Template</title>
+  <title>Uplift Music</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/logos/UpliftLogo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -42,18 +42,19 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Emily Jones</a></h1>
+      <h1><a href="index.html">Music</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>graphic designer</span> from New York</h2>
+      <!--<h2>I'm a passionate <span>graphic designer</span> from New York</h2>-->
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
-          <li><a class="nav-link" href="#resume">Resume</a></li>
-          <li><a class="nav-link" href="#services">Services</a></li>
-          <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link" href="#resume">Register</a></li>
+          <li><a class="nav-link" href="#services">MusicTuition</a></li>
+          <li><a class="nav-link" href="#services">Coaching & Healing Experience</a></li>
+          <li><a class="nav-link" href="#portfolio">Shop</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -75,22 +76,22 @@
     <!-- ======= About Me ======= -->
     <div class="about-me container">
 
-      <div class="section-title">
-        <h2>About</h2>
-        <p>Learn more about me</p>
-      </div>
+      <!--<div class="section-title">
+        <h2>About Uplift</h2>
+        <p>About Uplift</p>
+      </div>-->
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>UI/UX &amp; Graphic Designer</h3>
-          <p class="fst-italic">
+          <h3>About Uplift</h3>
+          <!--<p class="fst-italic">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua.
-          </p>
-          <div class="row">
+          </p>-->
+          <!--<div class="row">
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
@@ -107,18 +108,26 @@
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
-          </div>
+          </div>-->
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            At Uplift Music and Uplift Experiences, we harness the transformative power of music, art, and comprehensive coaching to inspire, uplift, and grow individuals and communities. Our platform serves as a dynamic hub for music education, offering resources for teachers, composers, musicians, and bands to showcase and sell their digital prints, arrangements, and new compositions. Additionally, we provide artists with a marketplace to sell their arts and crafts. Our diverse coaching channels, including life coaching, arts therapies, and creative workshops, aim to nurture personal development. By empowering individuals with an accessible platform to sell their intellectual property and creations, we believe the individual becomes the catalyst for positive change, growth and economic development in their communities. Uplift Music and Uplift Experiences: creating a harmonious blend of artistic expression and personal advancement.
           </p>
+        </div>
+      </div>
+      <div class="row">
+       
+        <div class="col-lg-12 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <h3>Who am I?</h3>
+          <p>
+            Graham Diesel has a post-graduate Music Education qualification and a Higher Teaching Diploma. He is a certified Neuro-Vocal Coach and his teaching is influenced by neuroscience, the body-mind connection and the Alexander technique. He has 25 years of experience teaching in a variety of settings.<p></p>Graham is passionate about changing lives through the arts. He dabbles in Music Production, composes and performs, and is an entrepreneur in the Arts and Education fields. loves art - he draws and paints in his spare time, and he loves hiking and going to the gym.
+          </p><p>He is the father of two amazing boys.</p>
         </div>
       </div>
 
     </div><!-- End About Me -->
 
     <!-- ======= Counts ======= -->
-    <div class="counts container">
+    <!--<div class="counts container">
 
       <div class="row">
 
@@ -154,12 +163,12 @@
           </div>
         </div>
 
-      </div>
+      </div>-->
 
-    </div><!-- End Counts -->
+    <!--</div> End Counts -->
 
     <!-- ======= Skills  ======= -->
-    <div class="skills container">
+    <!--<div class="skills container">
 
       <div class="section-title">
         <h2>Skills</h2>
@@ -217,12 +226,12 @@
 
         </div>
 
-      </div>
+      </div>-->
 
-    </div><!-- End Skills -->
+    <!-- </div>End Skills -->
 
     <!-- ======= Interests ======= -->
-    <div class="interests container">
+    <!--<div class="interests container">
 
       <div class="section-title">
         <h2>Interests</h2>
@@ -301,12 +310,12 @@
             <h3>Flavor Nivelanda</h3>
           </div>
         </div>
-      </div>
+      </div>-->
 
-    </div><!-- End Interests -->
+    <!--</div> End Interests -->
 
     <!-- ======= Testimonials ======= -->
-    <div class="testimonials container">
+    <!--<div class="testimonials container">
 
       <div class="section-title">
         <h2>Testimonials</h2>
@@ -325,10 +334,10 @@
               <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
               <h3>Saul Goodman</h3>
               <h4>Ceo &amp; Founder</h4>
-            </div>
-          </div><!-- End testimonial item -->
+            </div>-->
+          <!-- </div>End testimonial item -->
 
-          <div class="swiper-slide">
+          <!--<div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -338,10 +347,10 @@
               <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
               <h3>Sara Wilsson</h3>
               <h4>Designer</h4>
-            </div>
-          </div><!-- End testimonial item -->
+            </div>-->
+          <!--</div> End testimonial item -->
 
-          <div class="swiper-slide">
+          <!--<div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -351,10 +360,10 @@
               <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
               <h3>Jena Karlis</h3>
               <h4>Store Owner</h4>
-            </div>
-          </div><!-- End testimonial item -->
+            </div>-->
+          <!-- </div>End testimonial item -->
 
-          <div class="swiper-slide">
+          <!--<div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -364,10 +373,10 @@
               <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
               <h3>Matt Brandon</h3>
               <h4>Freelancer</h4>
-            </div>
-          </div><!-- End testimonial item -->
+            </div>-->
+          <!--</div> End testimonial item -->
 
-          <div class="swiper-slide">
+          <!--<div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -377,18 +386,18 @@
               <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
               <h3>John Larson</h3>
               <h4>Entrepreneur</h4>
-            </div>
-          </div><!-- End testimonial item -->
+            </div>-->
+          <!--</div>End testimonial item -->
 
-        </div>
+        <!--</div>
         <div class="swiper-pagination"></div>
       </div>
 
       <div class="owl-carousel testimonials-carousel">
 
-      </div>
+      </div>-->
 
-    </div><!-- End Testimonials  -->
+    <!--</div> End Testimonials  -->
 
   </section><!-- End About Section -->
 
@@ -685,8 +694,8 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Contact</h2>
-        <p>Contact Me</p>
+        <!--<h2>Contact</h2>-->
+        <p>Contact</p>
       </div>
 
       <div class="row mt-2">
@@ -716,14 +725,14 @@
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-envelope"></i>
-            <h3>Email Me</h3>
-            <p>contact@example.com</p>
+            <h3>Email</h3>
+            <p>graham@upliftmusic.co.za</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
-            <h3>Call Me</h3>
+            <h3>Call</h3>
             <p>+1 5589 55488 55</p>
           </div>
         </div>
