fixed navbar and logo

--- a/index.html
+++ b/index.html
@@ -41,13 +41,11 @@
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="container">
-
-      <h1><a href="index.html">Music</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <!--<h2>I'm a passionate <span>graphic designer</span> from New York</h2>-->
-
-      <nav id="navbar" class="navbar">
+     
+    
+      <nav id="navbar" class="navbar fixed-top mr-20">
+        <a href="index.html" class="mr-auto"><img src="assets/img/logos/UpliftLogo.png" alt="" class="img-fluid" style="height: 10vh"></a>
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
@@ -769,7 +767,7 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    Maintained by <a href="https://FT8.co.za/">FT8.co.za</a>
   </div>
 
   <!-- Vendor JS Files -->
