creatings new page

--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a
-                    href="portfolio-details.html"
+                    href="new.html"
                     data-gallery="portfolioDetailsGallery"
                     data-glightbox="type: external"
                     class="portfolio-details-lightbox"
