--- a/index.html
+++ b/index.html
@@ -984,8 +984,9 @@
             <div class="info-box">
               <i class="bx bx-map"></i>
               <h3>My Address</h3>
-              <p>17 Victoria Street, 4 The Marine, Van Ryneveld, Strand ,
-                7140</p>
+              <p>
+                17 Victoria Street, 4 The Marine, Van Ryneveld, Strand , 7140
+              </p>
             </div>
           </div>
 
@@ -1008,17 +1009,24 @@
           <div class="col-md-6 mt-4 d-flex align-items-stretch">
             <div class="info-box">
               <i class="bx bx-envelope"></i>
-              <h1>Email</h1>
-              <p><a href="mailto:graham@upliftmusic.co.za"
-                ><i class="fa fa-envelope-o" aria-hidden="true"></i> graham@upliftmusic.co.za</a
-              ></p>
+              <h3>Email</h3>
+              <p>
+                <a href="mailto:graham@upliftmusic.co.za"
+                  ><i class="fa fa-envelope-o" ></i>
+                  graham@upliftmusic.co.za</a
+                >
+              </p>
             </div>
           </div>
           <div class="col-md-6 mt-4 d-flex align-items-stretch">
             <div class="info-box">
               <i class="bx bx-phone-call"></i>
               <h3>Call</h3>
-              <p><a href="tel:0626412255"><i class="fa fa-phone" aria-hidden="true"></i> 062 6412 255 </a></p>
+              <p>
+                <a href="tel:0626412255"
+                  ><i class="fa fa-phone" ></i> 062 6412 255
+                </a>
+              </p>
             </div>
           </div>
         </div>
