home: removed logo on nav, moved social links and resized and spacing. added animation on Music

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <meta
       name="keywords"
-      content="Uplift Music, music lessons, piano lessons, vocal lessons, music education, Helderberg, Strand, lifelong learning, creative music education"
+      content="Uplift Music, music lessons, piano lessons, vocal lessons, music education, Helderberg, Strand, lifelong learning, creative music education, music lessons Somerset West"
     />
     <meta name="author" content="Uplift Music" />
     <meta name="robots" content="index, follow" />
@@ -90,12 +90,14 @@
 
         <nav id="navbar" class="navbar fixed-top mr-20">
           <a href="index.html" class="mr-auto"
-            ><img
+            ><!--<img
               src="assets/img/logos/UpliftLogo.png"
-              alt=""
+              alt="uplift logo"
               class="img-fluid"
               style="height: 10vh"
-          /></a>
+          />--></a
+          >
+
           <ul>
             <li><a class="nav-link active" href="#header">Home</a></li>
             <li><a class="nav-link" href="#about">About</a></li>
@@ -114,11 +116,22 @@
         <!-- .navbar -->
 
         <div class="social-links">
-          <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="#" target="_blank" class="facebook"
+            ><i class="bi bi-facebook"></i
+          ></a>
+          <a href="#" target="_blank" class="instagram"
+            ><i class="bi bi-instagram"></i
+          ></a>
+          <a href="#" target="_blank" class="linkedin"
+            ><i class="bi bi-music-note"></i
+          ></a>
+          <a href="#" target="_blank" class="youtube"
+            ><i class="bi bi-youtube"></i
+          ></a>
         </div>
+      </div>
+      <div class="animated-container">
+        <h1 class="animated-text">Music</h1>
       </div>
     </header>
     <!-- End Header -->
@@ -1012,8 +1025,7 @@
               <h3>Email</h3>
               <p>
                 <a href="mailto:graham@upliftmusic.co.za"
-                  ><i class="fa fa-envelope-o" ></i>
-                  graham@upliftmusic.co.za</a
+                  ><i class="fa fa-envelope-o"></i> graham@upliftmusic.co.za</a
                 >
               </p>
             </div>
@@ -1024,7 +1036,7 @@
               <h3>Call</h3>
               <p>
                 <a href="tel:0626412255"
-                  ><i class="fa fa-phone" ></i> 062 6412 255
+                  ><i class="fa fa-phone"></i> 062 6412 255
                 </a>
               </p>
             </div>
