changes on music animation

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
       </div>
       <div class="animated-container">
-        <h1 class="animated-text">Music</h1>
+        <p class="animated-text">Music</p>
       </div>
     </header>
     <!-- End Header -->
