change section element to not be opague

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </nav>
         <!-- .navbar -->
 
-        <div class="social-links">
+        <div class="social-links" class="col-lg-8">
           <a href="#" target="_blank" class="facebook"
             ><i class="bi bi-facebook"></i
           ></a>
@@ -131,7 +131,7 @@
         </div>
       </div>
       <div class="animated-container">
-        <p class="animated-text">Music</p>
+        <h1 class="animated-text">Music</h1>
       </div>
     </header>
     <!-- End Header -->
