--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           ></a>
         </div>
       </div>
-      <div class="animated-container">
+      <div class="animated-container image-fluid">
         <h1 class="animated-text">Music</h1>
       </div>
     </header>
