--- a/index.html
+++ b/index.html
@@ -144,10 +144,12 @@
         <h2>About Uplift</h2>
         <p>About Uplift</p>
       </div>-->
-
+        <div class="col-lg-4" data-aos="fade-right">
+          <img src="assets/img/aboutArt.png" class="img-fluid" alt="graham" />
+        </div>
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/me.jpg" class="img-fluid" alt="" />
+            <img src="assets/img/me.jpg" class="img-fluid" alt="graham" />
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>About Uplift</h3>
