--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
         <p>About Uplift</p>
       </div>-->
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/aboutArt.png" class="img-fluid" alt="graham" />
+          <img
+            src="assets/img/aboutArt.png"
+            class="img-fluid lineArt"
+            alt="graham"
+          />
         </div>
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
