info removed from registration page

--- a/index.html
+++ b/index.html
@@ -500,11 +500,11 @@
     <section id="resume" class="resume">
       <div class="container">
         <div class="section-title">
-          <h2>Registraion</h2>
+          <h3>Registraion</h3>
           <p>Please choose the correct option</p>
         </div>
 
-        <div class="row">
+        <!--<div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
@@ -599,7 +599,7 @@
               </ul>
             </div>
           </div>
-        </div>
+        </div>-->
       </div>
     </section>
     <!-- End Resume Section -->
