changes to abbout page

--- a/index.html
+++ b/index.html
@@ -144,17 +144,17 @@
         <h2>About Uplift</h2>
         <p>About Uplift</p>
       </div>-->
-      <div class="row">
-        <div class="col-lg-4 hidden-mobile"data-aos="fade-right" >
+      <div class="row" style="overflow: visible;">
+        <div class="col-lg-4 hidden-mobile"data-aos="fade-right"  >
           <img
             src="assets/img/lineArt/10.png"
             class="img-fluid lineArt"
-            style="margin-top: -1vw; margin-left:-10vw ; z-index: 10;"
+            style="height: 45vh; z-index: 1000; overflow: visible; position: absolute; top:0; left:0;"
             alt="graham"
           />
         </div>
 
-        <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+        <div class="col-lg-8 pt-4 pt-lg-0 content pb-10" data-aos="fade-left">
           <h3>About Uplift</h3>
           <!--<p class="fst-italic">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
