--- a/return.html
+++ b/return.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Uplift Music New Students</title>
+    <title>Uplift Music Returning Students</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -55,12 +55,12 @@
           <div class="row">
             <div class="col-lg-12">
               <h1 class="portfolio-title">
-                Please complete this form for new students
+                Please complete this form for Returning students
               </h1>
 
               <script
                 type="text/javascript"
-                src="https://app.mymusicstaff.com/Widget/v3/Registration.ashx?id=sch_FRwJQ"
+                src="https://app.mymusicstaff.com/Widget/v3/Registration.ashx?id=sch_FRwJQ&amp;pid=wpg_MD7JR"
                 class="sb_registration"
               ></script>
             </div>
