testing of new buttons

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <li><a class="nav-link active" href="#header">Home</a></li>
             <li><a class="nav-link" href="#about">About</a></li>
             <li><a class="nav-link" href="#register">Register</a></li>
-            <li><a class="nav-link" href="#tuition">MusicTuition</a></li>
+            <li><a class="nav-link" href="#tuition">Music Tuition</a></li>
             <li>
               <a class="nav-link" href="#coaching"
                 >Coaching & Healing Experience</a
@@ -114,12 +114,12 @@
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
         <!-- .navbar -->
-        <div class="typeblock" >
+        <div class="typeblock">
           <span
-          class="designation typewrite"
-          data-period="500"
-          data-type='[ "Music" , "Coaching" , "Experience" , "Shop" , "Art" , "Educational Resources", "Sheet Music"]'
-        ></span>
+            class="designation typewrite"
+            data-period="500"
+            data-type='[ "Music" , "Coaching" , "Experience" , "Shop" , "Art" , "Educational Resources", "Sheet Music"]'
+          ></span>
         </div>
         <div class="social-links" class="col-lg-8">
           <a href="#" target="_blank" class="facebook"
@@ -135,9 +135,7 @@
             ><i class="bi bi-youtube"></i
           ></a>
         </div>
-        
       </div>
-     
     </header>
     <!-- End Header -->
 
@@ -167,7 +165,7 @@
           </div>
 
           <div class="col-lg-8 pt-4 pt-lg-0 content pb-10" data-aos="fade-left">
-            <h3>About Uplift</h3>
+            <div class="col-lg-12 "style="display: flex; justify-content: right ;"><h5>About Uplift</h5></div>
             <!--<p class="fst-italic">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua.
@@ -214,8 +212,8 @@
             <img src="assets/img/me.jpg" class="img-fluid-w" alt="graham" />
           </div>
 
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Who am I?</h3>
+          <div class="col-lg-8 pt-4 pt-lg-0 content " data-aos="fade-left">
+            <div class="col-lg-12 "style="display: flex; justify-content: right ;"><h5>Who am I?</h5></div>
             <p>
               Graham Diesel has a post-graduate Music Education qualification
               and a Higher Teaching Diploma. He is a certified Neuro-Vocal Coach
@@ -531,7 +529,7 @@
           />
         </div>
         <div class="section-title">
-          <h3>Registraion</h3>
+          <h5>Registraion</h5>
           <p>Please choose the correct option</p>
         </div>
         <div class="d-flex p-20" style="justify-content: end">
@@ -546,16 +544,14 @@
                       data-glightbox="type: external"
                       class="portfolio-details-lightbox"
                       title="New Students"
-                      ><h4
-                        style="
-                          color: white;
-                          font-size: xx-large;
-                          justify-content: center;
-                          align-content: center;
-                        "
-                      >
+                      style="
+                        display: flex;
+                        align-content: center;
+                        padding-top: 1em;
+                      "
+                      ><p style="color: white; font-size: large">
                         New Students
-                      </h4></a
+                      </p></a
                     >
                   </button>
                 </div>
@@ -575,9 +571,14 @@
                       data-glightbox="type: external"
                       class="portfolio-details-lightbox align-items-center"
                       title="Returning Students"
-                      ><h4 style="color: white; font-size: xx-large">
+                      style="
+                        display: flex;
+                        align-content: center;
+                        padding-top: 1em;
+                      "
+                      ><p style="color: white; font-size: large">
                         Returning Students
-                      </h4></a
+                      </p></a
                     >
                   </button>
                 </div>
@@ -705,7 +706,7 @@
         </div>
         <div class="section-title">
           <!--<h2>Services</h2>-->
-          <h4 style="font-size: 60px">Studio Lessions</h4>
+          <h5 >Studio Lessons</h5>
         </div>
         <div class="d-flex p-20" style="justify-content: end">
           <div class="col-lg-3 col-md-6 portfolio-item filter-web">
@@ -719,16 +720,14 @@
                       data-glightbox="type: external"
                       class="portfolio-details-lightbox"
                       title=" About the Lessons"
-                      ><h4
-                        style="
-                          color: white;
-                          font-size: xx-large;
-                          justify-content: center;
-                          align-content: center;
-                        "
-                      >
+                      style="
+                        display: flex;
+                        align-content: center;
+                        padding-top: 1em;
+                      "
+                      ><p style="color: white; font-size: large">
                         About the Lessons
-                      </h4></a
+                      </p></a
                     >
                   </button>
                 </div>
@@ -748,9 +747,14 @@
                       data-glightbox="type: external"
                       class="portfolio-details-lightbox align-items-center"
                       title="Aproach to Lessons"
-                      ><h4 style="color: white; font-size: xx-large">
+                      style="
+                        display: flex;
+                        align-content: center;
+                        padding-top: 1em;
+                      "
+                      ><p style="color: white; font-size: large">
                         Aproach to Lessons
-                      </h4></a
+                      </p></a
                     >
                   </button>
                 </div>
@@ -900,16 +904,14 @@
                       data-glightbox="type: external"
                       class="portfolio-details-lightbox"
                       title="Life Coaching"
-                      ><h4
-                        style="
-                          color: white;
-                          font-size: xx-large;
-                          justify-content: center;
-                          align-content: center;
-                        "
-                      >
+                      style="
+                        display: flex;
+                        align-content: center;
+                        padding-top: 1em;
+                      "
+                      ><p style="color: white; font-size: large">
                         Life Coaching
-                      </h4></a
+                      </p></a
                     >
                   </button>
                 </div>
@@ -929,9 +931,14 @@
                       data-glightbox="type: external"
                       class="portfolio-details-lightbox align-items-center"
                       title="Creativty Coaching"
-                      ><h4 style="color: white; font-size: xx-large">
+                      style="
+                        display: flex;
+                        align-content: center;
+                        padding-top: 1em;
+                      "
+                      ><p style="color: white; font-size: large">
                         Creativty Coaching
-                      </h4></a
+                      </p></a
                     >
                   </button>
                 </div>
