--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
         <!-- .navbar -->
-        <div class="typeblock">
+        <div class="typeblock" style="padding-left: 30vw;" >
           <span
             class="designation typewrite"
             data-period="500"
@@ -153,7 +153,7 @@
               src="assets/img/lineArt/10.png"
               class="img-fluid lineArt"
               style="
-                height: 60vh;
+                height: 80vh;
                 z-index: 1000;
                 overflow: visible;
                 position: absolute;
@@ -890,7 +890,7 @@
         </div>
         <div class="section-title">
           <!--<h2>Services</h2>-->
-          <h4 style="font-size: 60px">Coaching & Healing</h4>
+          <h5>Coaching & Healing</h5>
         </div>
         <div class="d-flex p-20" style="justify-content: end">
           <div class="col-lg-3 col-md-6 portfolio-item filter-web">
