background color changes

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
             src="assets/img/lineArt/11.png"
             class="img-fluid lineArt"
             style="
-              height: 45vh;
+              height: 50vh;
               z-index: 0;
               overflow: visible;
               position: absolute;
@@ -694,7 +694,7 @@
             src="assets/img/lineArt/11.png"
             class="img-fluid lineArt"
             style="
-              height: 45vh;
+              height: 50vh;
               z-index: 0;
               overflow: visible;
               position: absolute;
@@ -878,7 +878,7 @@
             src="assets/img/lineArt/12.png"
             class="img-fluid lineArt"
             style="
-              height: 45vh;
+              height: 80vh;
               z-index: 0;
               overflow: visible;
               position: absolute;
@@ -1302,18 +1302,18 @@
             </div>
           </div>
 
-          <div class="col-md-6 mt-4 d-flex align-items-stretch">
+          <div class="col-md-6 mt-2 d-flex align-items-stretch">
             <div class="info-box">
               <i class="bx bx-envelope"></i>
               <h3>Email</h3>
               <p>
-                <a href="mailto:graham@upliftmusic.co.za"
-                  ><i class="fa fa-envelope-o"></i> graham@upliftmusic.co.za</a
+                <a href="mailto:graham@upliftmusic.co.za" style="z-index: -1;" 
+                  ><i class="fa fa-envelope-o" sty></i> graham@upliftmusic.co.za</a
                 >
               </p>
             </div>
           </div>
-          <div class="col-md-6 mt-4 d-flex align-items-stretch">
+          <div class="col-md-6 mt-2 d-flex align-items-stretch">
             <div class="info-box">
               <i class="bx bx-phone-call"></i>
               <h3>Call</h3>
@@ -1330,7 +1330,7 @@
           action="forms/contact.php"
           method="post"
           role="form"
-          class="php-email-form mt-4"
+          class="php-email-form mt-2 p-10-p"
         >
           <div class="row">
             <div class="col-md-6 form-group">
@@ -1368,7 +1368,7 @@
             <textarea
               class="form-control"
               name="message"
-              rows="5"
+              rows="1"
               placeholder="Message"
               required
             ></textarea>
