--- a/index.html
+++ b/index.html
@@ -534,10 +534,10 @@
         </div>
         <div class="d-flex p-20" style="justify-content: end">
           <div class="col-lg-3 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap" style="">
               <div class="portfolio-info">
                 <div class="text-center">
-                  <button type="button" class="btn mb-2 mb-md-0 btn-primary">
+                  <button type="button" class="btn mb-2 mb-md-0 btn-primary" style="width: 80%;">
                     <a
                       href="new.html"
                       data-gallery="portfolioDetailsGallery"
@@ -547,7 +547,9 @@
                       style="
                         display: flex;
                         align-content: center;
+                        justify-content: center;
                         padding-top: 1em;
+                        width:100%;
                       "
                       ><p style="color: white; font-size: large">
                         New Students
@@ -557,14 +559,10 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="d-flex p-20" style="justify-content: end">
-          <div class="col-lg-3 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap pt-20">
               <div class="portfolio-info">
                 <div class="text-center">
-                  <button type="button" class="btn mb-2 mb-md-0 btn-primary">
+                  <button type="button" class="btn mb-2 mb-md-0 btn-primary" style="width: 80%;">
                     <a
                       href="return.html"
                       data-gallery="portfolioDetailsGallery"
@@ -574,7 +572,9 @@
                       style="
                         display: flex;
                         align-content: center;
+                        justify-content: center;
                         padding-top: 1em;
+                        min-width: 10vw;
                       "
                       ><p style="color: white; font-size: large">
                         Returning Students
@@ -586,6 +586,7 @@
             </div>
           </div>
         </div>
+        
       </div>
       <!--<div class="row">
           <div class="col-lg-6">
