fixed wording on registration

--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                         width:100%;
                       "
                       ><p style="color: white; font-size: large">
-                        New Students
+                        New Client
                       </p></a
                     >
                   </button>
@@ -577,7 +577,7 @@
                         min-width: 10vw;
                       "
                       ><p style="color: white; font-size: large">
-                        Returning Students
+                        Existing Client
                       </p></a
                     >
                   </button>
