Register: added padding to sub header. MusicTuition: Added more buttons. poulated about lessons and created mini musicians page

--- a/mini-musicians.html
+++ b/mini-musicians.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Uplift Music</title>
+    <title>Uplift Music - Mini Musicians</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -66,25 +66,19 @@
             </div>-->
 
             <div class="col-lg-8 portfolio-info">
-              <h5>About Music Lessons</h5>
+              <h5>Mini Musicians</h5>
               <div>
                 <p style="font-size: 25px;">
-                  Unlock the magic of music with Uplift Music! Our piano and
-                  vocal lessons are designed for ages 4 and beyond, offering a
-                  dynamic and fun-filled approach.
+                  Individual 30-minute Pre-Reading lesson for 4 – 6 year old
+                  students: @ R200 per lesson
                 </p>
                 <br />
                 <p style="font-size: 25px;">
-                  Our expert instructors are not just teachers but passionate
-                  mentors dedicated to your musical journey.<br />
-                  Join us for an immersive experience transcending age,
-                  fostering creativity and joy in every note.
-                </p>
-                <br />
-                <p style="font-size: 25px;">
-                  Whether you're a young prodigy or an adult embracing lifelong
-                  learning, let the enchanting sounds of piano and the power of
-                  your voice become the key to a lifetime of musical fulfilment.
+                  Additional Fees for at-home lessons 0 – 5 km from Uplift Music
+                  Studio – add R50 per lesson 5.1 – 10 km from Uplift Music
+                  Studio – add R100 per lesson 10.1 to 15 km from Uplift Music
+                  Studio – add R150 per lesson Shop - Send me your details of
+                  items for purchase
                 </p>
               </div>
             </div>
