--- a/button.html
+++ b/button.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Website</title>
+    <title>Uplift Music</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -12,7 +12,8 @@
       .custom-btn {
         position: relative;
         display: inline-block;
-        padding: 10px 20px;
+        /*padding: 10px 20px;*/
+        padding: 10px;
         background-color: #3498db;
         color: #fff;
         border: none;
