--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
         <!-- .navbar -->
-        <div class="typeblock" style="padding-left: 30vw;" >
+        <div class="typeblock" style="padding-left: 30vw;">
           <span
             class="designation typewrite"
             data-period="500"
@@ -165,7 +165,12 @@
           </div>
 
           <div class="col-lg-8 pt-4 pt-lg-0 content pb-10" data-aos="fade-left">
-            <div class="col-lg-12 "style="display: flex; justify-content: right ;"><h5>About Uplift</h5></div>
+            <div
+              class="col-lg-12 "
+              style="display: flex; justify-content: right ;"
+            >
+              <h5>About Uplift</h5>
+            </div>
             <!--<p class="fst-italic">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua.
@@ -213,7 +218,12 @@
           </div>
 
           <div class="col-lg-8 pt-4 pt-lg-0 content " data-aos="fade-left">
-            <div class="col-lg-12 "style="display: flex; justify-content: right ;"><h5>Who am I?</h5></div>
+            <div
+              class="col-lg-12 "
+              style="display: flex; justify-content: right ;"
+            >
+              <h5>Who am I?</h5>
+            </div>
             <p>
               Graham Diesel has a post-graduate Music Education qualification
               and a Higher Teaching Diploma. He is a certified Neuro-Vocal Coach
@@ -530,14 +540,18 @@
         </div>
         <div class="section-title">
           <h5>Registraion</h5>
-          <p>Please choose the correct option</p>
+          <p class="subHeading-pages">Please choose the correct option</p>
         </div>
         <div class="d-flex p-20" style="justify-content: end">
           <div class="col-lg-3 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap" style="">
               <div class="portfolio-info">
                 <div class="text-center">
-                  <button type="button" class="btn mb-2 mb-md-0 btn-primary" style="width: 80%;">
+                  <button
+                    type="button"
+                    class="btn mb-2 mb-md-0 btn-primary"
+                    style="width: 80%;"
+                  >
                     <a
                       href="new.html"
                       data-gallery="portfolioDetailsGallery"
@@ -562,7 +576,11 @@
             <div class="portfolio-wrap pt-20">
               <div class="portfolio-info">
                 <div class="text-center">
-                  <button type="button" class="btn mb-2 mb-md-0 btn-primary" style="width: 80%;">
+                  <button
+                    type="button"
+                    class="btn mb-2 mb-md-0 btn-primary"
+                    style="width: 80%;"
+                  >
                     <a
                       href="return.html"
                       data-gallery="portfolioDetailsGallery"
@@ -586,7 +604,6 @@
             </div>
           </div>
         </div>
-        
       </div>
       <!--<div class="row">
           <div class="col-lg-6">
@@ -707,7 +724,63 @@
         </div>
         <div class="section-title">
           <!--<h2>Services</h2>-->
-          <h5 >Studio Lessons</h5>
+          <h5>Music Tuition</h5>
+        </div>
+        <div class="row" style="display: flex">
+          <div class="d-flex p-20" style="justify-content: end">
+            <div class="col-lg-3 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <div class="portfolio-info">
+                  <div class="text-center">
+                    <button type="button" class="btn mb-2 mb-md-0 btn-primary">
+                      <a
+                        href="about-lessons.html"
+                        data-gallery="portfolioDetailsGallery"
+                        data-glightbox="type: external"
+                        class="portfolio-details-lightbox"
+                        title=" About the Lessons"
+                        style="
+                        display: flex;
+                        align-content: center;
+                        padding-top: 1em;
+                      "
+                        ><p style="color: white; font-size: large">
+                          About the Lessons
+                        </p></a
+                      >
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex p-20" style="display: flex">
+            <div class="col-lg-3 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <div class="portfolio-info">
+                  <div class="text-center">
+                    <button type="button" class="btn mb-2 mb-md-0 btn-primary">
+                      <a
+                        href="mini-musicians.html"
+                        data-gallery="portfolioDetailsGallery"
+                        data-glightbox="type: external"
+                        class="portfolio-details-lightbox"
+                        title=" About the Lessons"
+                        style="
+                        display: flex;
+                        align-content: center;
+                        padding-top: 1em;
+                      "
+                        ><p style="color: white; font-size: large">
+                          Mini Musicians
+                        </p></a
+                      >
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="d-flex p-20" style="justify-content: end">
           <div class="col-lg-3 col-md-6 portfolio-item filter-web">
@@ -716,18 +789,18 @@
                 <div class="text-center">
                   <button type="button" class="btn mb-2 mb-md-0 btn-primary">
                     <a
-                      href="about-lessons.html"
+                      href="approach.html"
                       data-gallery="portfolioDetailsGallery"
                       data-glightbox="type: external"
-                      class="portfolio-details-lightbox"
-                      title=" About the Lessons"
+                      class="portfolio-details-lightbox align-items-center"
+                      title="Aproach to Lessons"
                       style="
                         display: flex;
                         align-content: center;
                         padding-top: 1em;
                       "
                       ><p style="color: white; font-size: large">
-                        About the Lessons
+                        Aproach to Lessons
                       </p></a
                     >
                   </button>
@@ -763,7 +836,34 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="d-flex p-20" style="justify-content: end">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <div class="portfolio-info">
+                <div class="text-center">
+                  <button type="button" class="btn mb-2 mb-md-0 btn-primary">
+                    <a
+                      href="approach.html"
+                      data-gallery="portfolioDetailsGallery"
+                      data-glightbox="type: external"
+                      class="portfolio-details-lightbox align-items-center"
+                      title="Aproach to Lessons"
+                      style="
+                        display: flex;
+                        align-content: center;
+                        padding-top: 1em;
+                      "
+                      ><p style="color: white; font-size: large">
+                        Aproach to Lessons
+                      </p></a
+                    >
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--<div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
@@ -811,7 +911,7 @@
             </div>
           </div>
 
-          <!--<div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
               <h4><a href="">Individual 60-minute lesson</a></h4>
@@ -831,10 +931,10 @@
                 sit aspernatur
               </p>
             </div>
-          </div>-->
+          </div>
         </div>
         <div class="section-title">
-          <!--   <h2>Services</h2>-->
+           <h2>Services</h2>
           <h4 style="font-size: 60px">At-home lessons</h4>
         </div>
         <div class="row">
@@ -870,7 +970,7 @@
         </div>
       </div>
     </section>
-    <!-- End Services Section -->
+    End Services Section -->
 
     <section id="coaching" class="services">
       <div class="container" style="min-height: 80vh">
@@ -1308,8 +1408,9 @@
               <i class="bx bx-envelope"></i>
               <h3>Email</h3>
               <p>
-                <a href="mailto:graham@upliftmusic.co.za" style="z-index: -1;" 
-                  ><i class="fa fa-envelope-o" sty></i> graham@upliftmusic.co.za</a
+                <a href="mailto:graham@upliftmusic.co.za" style="z-index: -1;"
+                  ><i class="fa fa-envelope-o" sty></i>
+                  graham@upliftmusic.co.za</a
                 >
               </p>
             </div>
