fixed the coaching and healing section

--- a/index.html
+++ b/index.html
@@ -967,10 +967,10 @@
               </p>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
-    End Services Section -->
+    End Services Section
 
     <section id="coaching" class="services">
       <div class="container" style="min-height: 80vh">
